[tool.poetry]
name = "geolocation-api"
version = "0.1.0"
description = ""
authors = ["Rafal Stepien <rstepien095@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"
uvloop = "^0.17.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.coverage.run]
omit = ["tests/*", "*__init__.py"]
